[package]
name = "fehler"
version = "1.0.0-alpha.2"
edition = "2018"
authors = ["Without Boats <boats@mozilla.com>"]
license = "MIT OR Apache-2.0"

description = "A small, opinionated error-handling library"
repository = "https://github.com/withoutboats/fehler"

[dependencies.fehler-macros]
path = "./fehler-macros"
version = "1.0.0-alpha.2"

[features]
nightly = []

[workspace]
