[package]
name = "fehler-macros"
version = "0.1.0-alpha.0"
authors = ["Without Boats <boats@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
synstructure = "0.12.0"
proc-macro2 = "1.0.0"

[dependencies.syn]
features = ["default", "fold", "full"]
version = "1.0.0"
