[package]
name = "fehler-macros"
version = "1.0.0-alpha.2"
edition = "2018"
authors = ["Without Boats <boats@mozilla.com>"]
license = "MIT OR Apache-2.0"

description = "Macros des Fehlers"
repository = "https://github.com/withoutboats/fehler"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
proc-macro2 = "1.0.0"

[dependencies.syn]
features = ["default", "fold", "full", "parsing"]
version = "1.0.0"
